# crfsuite

./: README.md  pyproject.toml
src/brand_detection/: __init__.py  __version__.py  crf.py  data.py  features.py  main.py  preprocess.py  text.py  util.py
